[gd_scene load_steps=18 format=3 uid="uid://dsfq3hr0ydunj"]

[ext_resource type="Script" path="res://interface/scripts/CloseCharacterDescriptionMenu.gd" id="1_c554a"]
[ext_resource type="Texture2D" uid="uid://btwf2vffq2igq" path="res://interface/sprites/Weight.png" id="1_lex73"]
[ext_resource type="Texture2D" uid="uid://dkdum4iw1nbf4" path="res://interface/sprites/Count.png" id="2_r116s"]
[ext_resource type="Texture2D" uid="uid://vhx86outocmp" path="res://interface/sprites/Copper.png" id="3_mom4h"]
[ext_resource type="Texture2D" uid="uid://dce6aqx316x7g" path="res://interface/sprites/Silver.png" id="4_chm6i"]
[ext_resource type="Texture2D" uid="uid://d07ljqlouva2n" path="res://interface/sprites/Gold.png" id="5_jkxsv"]
[ext_resource type="Texture2D" uid="uid://c8v0p52ajxo2l" path="res://interface/sprites/VectorBlack.png" id="6_vrnmh"]
[ext_resource type="Texture2D" uid="uid://dachm60mvxty8" path="res://interface/sprites/VectorRed.png" id="7_tsu3q"]
[ext_resource type="Script" path="res://interface/scripts/CloseBGMenu.gd" id="9_u2yw4"]
[ext_resource type="PackedScene" uid="uid://b7km80to33j4e" path="res://interface/scenes/ChangingItemCountWindow.tscn" id="10_quegm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pmm7w"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j632b"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 0.376471)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 0.105882)
shadow_size = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_84a4d"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_06ppj"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6yga3"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v0m6u"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b36cn"]
bg_color = Color(0, 0, 0, 0.32549)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="CharacterDescriptionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 610.0
offset_top = 200.0
offset_right = -710.0
offset_bottom = -480.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c554a")

[node name="BGPanel" type="Panel" parent="."]
layout_mode = 0
offset_right = 700.0
offset_bottom = 680.0
theme_override_styles/panel = SubResource("StyleBoxFlat_pmm7w")

[node name="ItemNameTitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 130.0
offset_top = 40.0
offset_right = 260.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Название:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemNameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 270.0
offset_top = 40.0
offset_right = 550.0
offset_bottom = 80.0
pivot_offset = Vector2(-275, -155)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Предмет"
vertical_alignment = 1

[node name="CategoryTypeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 210.0
offset_top = 100.0
offset_right = 355.0
offset_bottom = 140.0
pivot_offset = Vector2(-275, -155)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Инструмент"
vertical_alignment = 1

[node name="CategoryTitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 100.0
offset_right = 190.0
offset_bottom = 140.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Категория:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionTitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 160.0
offset_right = 185.0
offset_bottom = 200.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Описание:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionTextEdit" type="TextEdit" parent="."]
custom_minimum_size = Vector2(415, 115)
layout_mode = 0
offset_left = 61.0
offset_top = 208.0
offset_right = 641.0
offset_bottom = 358.0
mouse_default_cursor_shape = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_readonly_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 0.529412)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_j632b")
theme_override_styles/focus = SubResource("StyleBoxFlat_j632b")
theme_override_styles/read_only = SubResource("StyleBoxFlat_j632b")
editable = false
context_menu_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
wrap_mode = 1
scroll_smooth = true
scroll_v_scroll_speed = 20.0
caret_blink = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 60.0
offset_top = 220.0
offset_right = 640.0
offset_bottom = 350.0
theme_override_styles/panel = SubResource("StyleBoxFlat_84a4d")

[node name="DescriptionLabel" type="Label" parent="ScrollContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Здесь что то
написано..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="PriceLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 390.0
offset_right = 130.0
offset_bottom = 430.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Цена:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TypeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 390.0
offset_top = 100.0
offset_right = 450.0
offset_bottom = 140.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Тип:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WeightLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 490.0
offset_right = 110.0
offset_bottom = 530.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Вес:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WeightValueLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 110.0
offset_top = 490.0
offset_right = 230.0
offset_bottom = 530.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "1"
horizontal_alignment = 2
vertical_alignment = 1

[node name="WeightImage" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 240.0
offset_top = 492.0
offset_right = 285.0
offset_bottom = 537.0
scale = Vector2(0.8, 0.8)
texture = ExtResource("1_lex73")

[node name="CountLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 580.0
offset_right = 150.0
offset_bottom = 620.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Кол-во:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CountValueLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 150.0
offset_top = 580.0
offset_right = 230.0
offset_bottom = 620.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "1"
horizontal_alignment = 2
vertical_alignment = 1

[node name="CountImage" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 238.0
offset_top = 585.0
offset_right = 283.0
offset_bottom = 630.0
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_r116s")

[node name="MagicalLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 470.0
offset_top = 103.0
offset_right = 635.0
offset_bottom = 143.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Немагическое"

[node name="ReturnButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 35.0
offset_right = 110.0
offset_bottom = 80.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("6_vrnmh")
texture_pressed = ExtResource("7_tsu3q")
texture_hover = ExtResource("7_tsu3q")
texture_disabled = ExtResource("7_tsu3q")
texture_focused = ExtResource("7_tsu3q")

[node name="MoneyPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 140.0
offset_top = 375.0
offset_right = 640.0
offset_bottom = 455.0
theme_override_styles/panel = SubResource("StyleBoxFlat_06ppj")

[node name="CopperValueLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 445.0
offset_top = 390.0
offset_right = 535.0
offset_bottom = 430.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "11"
horizontal_alignment = 2
vertical_alignment = 1

[node name="CopperImage" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 540.0
offset_top = 393.0
offset_right = 585.0
offset_bottom = 438.0
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_mom4h")

[node name="SilverValueLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 295.0
offset_top = 390.0
offset_right = 385.0
offset_bottom = 430.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "11"
horizontal_alignment = 2
vertical_alignment = 1

[node name="SilverImage" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 390.0
offset_top = 393.0
offset_right = 435.0
offset_bottom = 438.0
scale = Vector2(0.8, 0.8)
texture = ExtResource("4_chm6i")

[node name="GoldValueLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 145.0
offset_top = 390.0
offset_right = 235.0
offset_bottom = 430.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "11"
horizontal_alignment = 2
vertical_alignment = 1

[node name="GoldenImage" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 240.0
offset_top = 393.0
offset_right = 285.0
offset_bottom = 438.0
scale = Vector2(0.8, 0.8)
texture = ExtResource("5_jkxsv")

[node name="ChangeButton" type="Button" parent="."]
layout_mode = 0
offset_left = 440.0
offset_top = 530.0
offset_right = 640.0
offset_bottom = 630.0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_6yga3")
theme_override_styles/hover = SubResource("StyleBoxFlat_v0m6u")
theme_override_styles/pressed = SubResource("StyleBoxFlat_v0m6u")
theme_override_styles/disabled = SubResource("StyleBoxFlat_v0m6u")
theme_override_styles/focus = SubResource("StyleBoxFlat_v0m6u")
text = "Отдать
"

[node name="BGMenu" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_right = 700.0
offset_bottom = 680.0
theme_override_styles/panel = SubResource("StyleBoxFlat_b36cn")
script = ExtResource("9_u2yw4")

[node name="ChangingItemCountWindow" parent="." instance=ExtResource("10_quegm")]
visible = false
layout_mode = 1
offset_left = 270.0
offset_top = 400.0
offset_right = -330.0
offset_bottom = 0.0

[connection signal="pressed" from="ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="ChangeButton" to="BGMenu" method="_on_change_button_pressed"]
[connection signal="pressed" from="ChangeButton" to="ChangingItemCountWindow" method="_on_change_button_pressed"]
[connection signal="hidden" from="ChangingItemCountWindow" to="BGMenu" method="_on_changing_item_count_window_hidden"]
[connection signal="item_removed" from="ChangingItemCountWindow" to="." method="_on_return_button_pressed"]
